Allow empty fields for calculation

(cherry picked from commit 3ee4f7de1e288c49e26ce6fad00ae3e915b22f9d)

BUG: 459881
FIXED-IN: 5.1.4